--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,11 +70,11 @@
 
                     // Handle response based on the backend result
                     if (data.is_anagram === true) {
-                        resultDiv.textContent = "Yes, they are anagrams!"
+                        resultDiv.textContent = "Yes, they are anagrams! :)"
                         resultDiv.style.backgroundColor = "#4CAF50";
 
                     } else {
-                        resultDiv.textContent = "No, they are not anagrams.";
+                        resultDiv.textContent = "No, they are not anagrams. :(";
                         resultDiv.style.backgroundColor = "#F44336";
                     }
                 } catch (error) {
