--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 <body style="font-family: Arial, sans-serif; background-color: #f5f5f5; display: flex; flex-direction: column; align-items: center; padding: 50px;">
 
     <h1 style="color: #333; font-size: 2.5rem; margin-bottom: 30px;">🔁 Anagram Checker</h1>
-    <div style="display: flex; flex-direction: column; gap: 15px; width: 100%; max-width: 400px;"></div>
+    <div style="display: flex; flex-direction: column; gap: 15px; width: 100%; max-width: 400px;">
     <!-- Input fields for the strings -->
     <input
             type="text"
